# Antuco

./: .gitignore  .gitmodules  .zedstate  CMakeLists.txt  CMakeSettings.json  README.md  code_standards.txt  compile_commands.json  diff_output.txt  main.cpp  vk_layer_settings.txt
.ccls-cache/@@Users@ganidhu@Antuco/: @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@AssertMacros.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@Availability.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@AvailabilityInternal.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@AvailabilityMacros.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@AvailabilityVersions.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@Block.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@ConditionalMacros.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@MacTypes.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@TargetConditionals.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@__wctype.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_ctermid.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_ctype.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_locale.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_regex.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_stdio.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_intmax_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_nl_item.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint16_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint32_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint64_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint8_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uintmax_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_wctrans_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_wctype_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_wctype.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_xlocale.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@alloca.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@_limits.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@_mcontext.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@_param.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@_types.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@arch.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@arm@endian.h.blob  (+431 more)
inc/: antuco.hpp  antuco_enums.hpp  api_config.hpp  api_graphics.hpp  api_window.hpp  command_buffer.hpp  component.hpp  component_manager.hpp  config.hpp  cubemap.hpp  data_structures.hpp  descriptor_set.hpp  draw_item.hpp  entity.hpp  environment.hpp  execute_pass.hpp  frame_update.hpp  graphics.hpp  lut.hpp  material.hpp  material_type.hpp  memory_allocator.hpp  mesh.hpp  mesh_component.hpp  model.hpp  node.hpp  pipeline.hpp  processor.hpp  processor_library.hpp  queue.hpp  render_pass.hpp  scene.hpp  shader_text.hpp  transform_component.hpp  tuco_pass.hpp  window.hpp  world_objects.hpp
lib/: antuco.cpp  api_config.cpp  api_graphics.cpp  api_window.cpp  camera.cpp  component.cpp  component_manager.cpp  config.cpp  cubemap.cpp  data_structures.cpp  descriptor_set.cpp  environment.cpp  game_objects.cpp  graphics.cpp  graphics_draw.cpp  graphics_initialize.cpp  light.cpp  lut.cpp  material.cpp  material_type.cpp  memory_allocator.cpp  mesh.cpp  model.cpp  node.cpp  pipeline.cpp  point_light.cpp  render_pass.cpp  scene.cpp  shader_text.cpp  tuco_pass.cpp  window.cpp
objects/: cube.mtl
render_examples/: bmw.hpp
shaders/: base.hlsl  brdf_lut.frag  brdf_lut.vert  compile.bat  frag.spv  light_cull.comp  no_texture.frag  opaque_draw.hlsl  pbr_mesh.hlsl  quad.frag  quad.hlsl  quad.vert  shader.frag  shader.vert  shadow.hlsl  shadow.vert  skybox.frag  skybox.vert  structures.hlsl  vert.spv
(+1840 files in other folders)
